Added functionality without stream